--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
 
 <body>
     <ul>
-        <li><a href="Algoritmo.html">Algoritmo</a></li>
-        <li><a href="Atalhos.html">Atalhos</a></li>
-        <li><a href="Curiosidades.html">Curiosidades</a></li>
-        <li><a href="Historico.html">Histórico</a></li>
-        <li><a href="NomeIdiomas.html">NomeIdiomas</a></li>
-        <li><a href="Pagina.html">Página</a></li>
-        <li><a href="ProjetoAlfa.html">ProjetoAlfa</a></li>
-        <li><a href="TagsHTML.html">TagsHTML</a></li>
+        <li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
+        <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
+        <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
+        <li><a href="Historico.html" rel="next">Histórico</a></li>
+        <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
+        <li><a href="PaginaHTML.html" rel="next">PáginaHTML</a></li>
+        <li><a href="ProjetoAlfa.html" rel="next">ProjetoAlfa</a></li>
+        <li><a href="TagsCSS.html"rel="next">TagsCSS</a></li>
+        <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
     </ul>
 
+    <div id="interface">
     <h1 align="center">Meu site &#x1F604;</h1>
     <h2>Aqui irei postar tudo o que eu faço</h2>
     <h3>Futuramente irei colocar tudo em links</h3>
@@ -38,9 +40,15 @@
     Removi o Login temporariamente, pois não vou mexer tão cedo<br>
     Criei a página Algoritmo, nela irei por dicas de Algoritmo é claro, linguagem Portugol
 
+    <strong>29/01</strong> 1.5<br>
+    Adicionei opção de voltar em todas páginas<br>
+    Criei uma div pra interface, caso não saibam o que é, eu falei em <a href="TagsHTML.html">TagsHTML</a><br>
+    Criei o menu TagsCSS onde eu irei por as que eu vou usar<br>
+    Editei a parte de Algoritmo, agora ela está mais organizada
+
    <footer>
         <p>Copyright ©2022</p>
     </footer>
+</div>
 </body>
-
 </html>
