--- a/NomeIdiomas.html
+++ b/NomeIdiomas.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <ul>
+        <li><a href="index.html" rel="prev">Voltar</a></li>
+    </ul>
     <h1 align="center"><strong>Meu nome em vários idiomas</strong></h1>
 
     <p>1-Américo : ዳንኤል dani’ēli</p>
