--- a/ProjetoAlfa.html
+++ b/ProjetoAlfa.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <ul>
+        <li><a href="index.html" rel="prev">Voltar</a></li>
+    </ul>
     <h1>Alfabeto</h1>
     <ol>
     <!--ol = Lista ordenada : 1,2,3,etc-->
