--- a/TagsHTML.html
+++ b/TagsHTML.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <ul>
+        <li><a href="index.html" rel="prev">Voltar</a></li>
+    </ul>
     <h1>Tags HTML</h1>
     <p>
         obs¹ = Isso são tags que precisam estar juntas<br>
@@ -18,11 +21,12 @@
     </p>
     <p>
         1¹ <strong>< a href="UrldoSite">Mensagem< /></strong><br>
-        Serve pra abrir um link externo-->
+        Serve pra abrir um link externo<br>
+        a = Âncora , href = referência 
     </p>
 
     <p>
-        2¹ < a href="UrldoSite" target="_blank">Mensagem< /><br>
+        2¹ <strong>< a href="UrldoSite" target="_blank">Mensagem< /></strong><br>
         Serve pra abrir um link externo numa nova aba do navegador
     </p>
     
@@ -32,8 +36,18 @@
     </p>
 
     <p>
-        4¹ < br><br>
+        4¹ <strong>< br></strong><br>
         Serve pra pular linha e continuar na margem esquerda
+    </p>
+
+    <p>
+        5¹ <strong>< div id="Nome"> < /div></strong><br>
+        Div = É um container que serve pra agrupar elementos para fins de estilo usando class ou id<br>
+        class = Identificar um conjunto de elementos HTML que compartilham uma classe comum <br>
+        Ex: Imagem, Tabela
+        id = Identificar um elemento HTML específico.<br>
+        Ex: Interface, Parágrafo <br>
+
     </p>
 
     <p>
