--- a/Atalhos.html
+++ b/Atalhos.html
@@ -14,6 +14,10 @@
     
     <h1>Atalhos</h1>
 
+    <p>CTRL Click<br>
+    Escolha uma palavra e segure CTRL e depois clique nela com o botão esquerdo do mouse, isso irá seguir<br>
+    Caso não esteja criado o arquivo, vai perguntar se deseja fazer isso</p>
+
     <p>CTRL Espaço<br>
     Seleciona algo na pasta<br></p>
     
