--- a/Historico.html
+++ b/Historico.html
@@ -14,9 +14,29 @@
         <li><a href="index.html" rel="prev">Voltar</a></li>
     </ul>
     <h1>Histórico de Versões : &#x1F605;</h1> 
-    <strong><p>OBS¹ : Login ainda não está funcionando, não cliquem</p></strong>
-    <strong><p>OBS² : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong>
-    <strong><p>OBS³ : Histórico completo basta clicar no Histórico acima</p></strong>
+    <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
+
+    <strong>30/01</strong> 1.6<br>
+    Eu havia esquecido de pular linha da 1.4 pra 1.5, então corrigi isso, ontem continuei focando no CSS<br>
+    Criado o ProjetoGoogleGlass, esse projeto faz parte do <a href="https://www.cursoemvideo.com/curso/html5/aulas/html/" target="blank">Curso de HTML 5</a> do Gustavo Guanabara<br>
+    Link citado : <a href="https://www.cursoemvideo.com/curso/html5/aulas/html/" target="blank">https://www.cursoemvideo.com/curso/html5/aulas/html/</a><br>
+    Finalizei as TagsHTML temporariamente <br>
+    A partir de hoje irei por o Histórico no menu Histórico<br>
+    Atualizei mais coisas<br><br>
+
+    <strong>29/01</strong> 1.5<br>
+    Adicionei opção de voltar em todas páginas<br>
+    Criei uma div pra interface, caso não saibam o que é, eu falei em <a href="TagsHTML.html">TagsHTML</a><br>
+    Criei o menu TagsCSS onde eu irei por as que eu vou usar<br>
+    Editei a parte de Algoritmo, agora ela está mais organizada<br>
+
+    <strong>28/01</strong> 1.4<br>
+    Bom galera eu tentei reverter o histório, ao invés de ser de cima pra baixo, ser de baixo pra cima, usando comando, mas bugou<br> completamente,<br>
+    Antes eu testei e deu certo, porém no meu site aconteceu isso, então fiz na mão<br>
+    <strong>Ontem</strong> eu falei que as dicas estavam no menu Dicas, porém só hoje eu percebi que tinha mudado o nome pra Página kkkkkkkk<br>
+    Agora o menu está mais limpo, pois resolvi mudar, agora irei postar somente a do dia aqui<br>
+    Removi o Login temporariamente, pois não vou mexer tão cedo<br>
+    Criei a página Algoritmo, nela irei por dicas de Algoritmo é claro, linguagem Portugol<br><br>
 
     <strong>27/01</strong> 1.3<br>
     -Mais comentários nos códigos<br>
