--- a/PaginaHTML.html
+++ b/PaginaHTML.html
@@ -53,9 +53,14 @@
     Vai ocupar 150% (0.5) da Tela do PC
     Se fosse 1.0 seria 100%
     Se fosse 1.5 seria 50%
-    
+
     8¹ < title> Texto < /title>
     O que irá aparecer na Aba do Navegador
+
+    < title>Meu site</>
+    < link rel="stylesheet" href="estilo.css">
+    Aqui eu to falando pro navegador que as folhas de estilo ( stylesheet ) está no arquivo estilo.css
+    < link rel="shortcut icon" href="favicon.ico">
 
     10¹ < body>
     É o corpo do site
