--- a/TagsHTML.html
+++ b/TagsHTML.html
@@ -13,12 +13,9 @@
         <li><a href="index.html" rel="prev">Voltar</a></li>
     </ul>
     <h1>Tags HTML</h1>
-    <p>
-        obs¹ = Isso são tags que precisam estar juntas<br>
-        Por exemplo : < strong>, se eu juntar o <, não irá aparecer o código, por isso
-        estou notificando antes<br>
-        obs² = Mensagem / Texto = A pessoa pode escrever qualquer coisa 
-    </p>
+        <p>obs¹ = Isso são tags que precisam estar juntas</p>
+        <p>Por exemplo : < strong>, se eu juntar o <, não irá aparecer o código, por isso estou notificando antes</p>
+        <p>obs² = Mensagem / Texto = A pessoa pode escrever qualquer coisa </p><br>
     <p>
         1¹ <strong>< a href="UrldoSite">Mensagem< /></strong><br>
         Serve pra abrir um link externo<br>
@@ -51,79 +48,82 @@
     </p>
 
     <p>
-        5¹ <strong>< form action="submit-form.php" method="post"></strong><br>
+        6¹ <strong>< form action="submit-form.php" method="post"></strong><br>
         Ainda não estudei isso
     </p>
 
     <p>
-        6¹ < h1>< /h1><br>
+        7¹ <strong>< h1>< /h1></strong><br>
         Nível 1 de Título, assim como h2 é subnível, etc até h6-->
     </p>
 
     <p>
-        7¹ <strong>< h1 align="center"></strong><br>
+        8¹ <strong>< h1 align="center"></strong><br>
         align="center" = Alinhamento ao centro, está em vermelho o código pois não está em uso
     </p>
 
     <p>
-        14¹ < input type="text" id="Nome" name="Nome">
+        9¹ <strong>< input type="text" id="Nome" name="Nome"></strong><br>
         Pedindo pro usuário digitar um texto
     </p> 
 
     <p>
-        15¹ < input type="submit" value="Submit">
+        10¹ <strong>< input type="submit" value="Submit"></strong><br>
         Pedindo pro usuário clicar na caixa criada
     </p>
 
     <p>
-        8¹ < label for="Usuário">Usuário:</><br>
+        11¹ <strong>< label for="Usuário">Usuário:</></strong><br>
         Criando uma caixa ( label ) com nome de Usuário com título Usuário
     </p>
 
     <p>
-        9¹<strong>1¹ < li>< a href="ProjetoAlfa.html">ProjetoAlfa< />< /></strong><br>
-        < li>< /li> É um item da lista
+        12¹ <strong>< li>< /li></strong><br>
+        É um item de uma lista.<br>
         Por ser um item da lista, antes a pessoa precisa ter colocado < ol>< /ol> ou < ul> < /ul><br>
-        href : Está dizendo pro navegador onde está o html especificado, por padrão coloquei o nome do link 
-        sendo o nome do Título
+    </p>
+    <p>
+        13¹ <strong>1¹ < li>< a href="ProjetoAlfa.html">ProjetoAlfa< />< /></strong><br>
+        href : Está dizendo pro navegador onde está o html especificado, por padrão coloquei o nome do link sendo o nome do Título
     </p>
 
     <p>
-        7¹ <strong>< link rel="shortcut icon" href="favicon.ico"></strong><br>
+        14¹ <strong>< link rel="shortcut icon" href="favicon.ico"></strong><br>
         Aqui ele está referindo a shortcut icon ( Icone de Atalho ) chamando arquivo favicon.ico<br>
         Eu estou dizendo pro Navegador usar o arquivo favicon.ico que está na pasta
     </p>
 
     <p>
-        9¹ <strong>< link rel="stylesheet" href="estilo.css"></strong><br>
+        15¹ <strong>< link rel="stylesheet" href="estilo.css"></strong><br>
         Aqui ele está referindo a stylesheet ( Folhas de Estilo ) chamando arquivo estilo.css<br>
-        Eu estou dizendo pro Navegador usar o estilo do arquivo estilo.css que está na pasta
+        Eu estou dizendo pro Navegador usar o estilo do arquivo estilo.css que está na pasta<br>
+        Usar no < head></ head> ( Ver <a href="PaginaHTML.html">PáginaHTML</a> ) embaixo de < title>Meu site< /title>
     </p>
 
     <p>
-        10¹ < p>Texto< /p><br>
+        16¹ <strong>< p>Texto< /p></strong><br>
         Faz do Texto um Parágrafo
     </p>
 
     <p>
-        11¹ < pre> Texto < /pre><br>
+        17¹ <strong>< pre> Texto < /pre></strong><br>
         Tudo que está no Texto vai respeitar a sua formatação.<br>
         Se pular linha, vai pular linha, não será necessário usar outras tags<br>
     </p>
 
     <p>
-        12¹ < strong> Palavra < /strong><br>
+        18¹ <strong>< strong> Palavra < /strong></strong><br>
         Isso serve pra deixar a Palavra em Negrito--
     </p>
 
     <p>
-        13¹ < ul> < /ul><br>
+        19¹ <strong>< ul> < /ul></strong><br>
         Comando pra lista não ordenada, ou seja não segue uma sequência
         Como não especifiquei por padrão fica uma bolinha com fundo preto
     </p>
     
     <p>
-        14¹ < ul type:"Tipo"><br>
+        20¹ <strong>< ul type:"Tipo"></strong><br>
         Podemos definitir o tipo usando isso<br>
         Tipos :<br>
         disc = Padrão, bolinha com fundo preto<br>
