--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=0.5">
-    <link rel="shortcut icon" href="favicon.ico">
     <title>Meu site</title>
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="estilo.css">
 
 </head>
@@ -19,33 +19,35 @@
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
         <li><a href="PaginaHTML.html" rel="next">PáginaHTML</a></li>
         <li><a href="ProjetoAlfa.html" rel="next">ProjetoAlfa</a></li>
+        <li><a href="ProjetoGoogleGlass.html">ProjetoGoogleGlass</a></li>
         <li><a href="TagsCSS.html"rel="next">TagsCSS</a></li>
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
     </ul>
 
     <div id="interface">
-    <h1 align="center">Meu site &#x1F604;</h1>
+    <h1>Meu site &#x1F604;</h1>
     <h2>Aqui irei postar tudo o que eu faço</h2>
-    <h3>Futuramente irei colocar tudo em links</h3>
-
-    <h4>Histórico de Versões : &#x1F605;</h4>
-    <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong>
-    <strong><p>OBS² : Histórico completo basta clicar no Histórico acima</p></strong>
-
-    <strong>28/01</strong> 1.4<br>
-    Bom galera eu tentei reverter o histório, ao invés de ser de cima pra baixo, ser de baixo pra cima, usando comando, mas bugou<br> completamente,<br>
-    Antes eu testei e deu certo, porém no meu site aconteceu isso, então fiz na mão<br>
-    <strong>Ontem</strong> eu falei que as dicas estavam no menu Dicas, porém só hoje eu percebi que tinha mudado o nome pra Página kkkkkkkk<br>
-    Agora o menu está mais limpo, pois resolvi mudar, agora irei postar somente a do dia aqui<br>
-    Removi o Login temporariamente, pois não vou mexer tão cedo<br>
-    Criei a página Algoritmo, nela irei por dicas de Algoritmo é claro, linguagem Portugol
-
-    <strong>29/01</strong> 1.5<br>
-    Adicionei opção de voltar em todas páginas<br>
-    Criei uma div pra interface, caso não saibam o que é, eu falei em <a href="TagsHTML.html">TagsHTML</a><br>
-    Criei o menu TagsCSS onde eu irei por as que eu vou usar<br>
-    Editei a parte de Algoritmo, agora ela está mais organizada
-
+   
+    <h3>Histórico de Versões : &#x1F605;</h3>
+    <strong><p>OBS¹ : Histórico completo agora no menu Histórico acima</p></strong>
+    <pre>
+    ▂▃▄▅▆▇█▓▒░Seja Bem Vindo/a░▒▓█▇▆▅▄▃▂
+      ▒░░░░░░░░░░░░░░░░░░░░░░█████████░░░░░░░░
+      ░░███████░░░░░░░░░░███▒▒▒▒▒▒▒▒███░░░░░░░
+      ░░█▒▒▒▒▒▒█░░░░░░░███▒▒▒▒▒▒▒▒▒▒▒▒▒███░░░░
+      ░░░█▒▒▒▒▒▒█░░░░██▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██░░
+      ░░░░█▒▒▒▒▒█░░░██▒▒▒▒▒██▒▒▒▒▒▒██▒▒▒▒▒███░
+      ░░░░░█▒▒▒█░░░█▒▒▒▒▒▒████▒▒▒▒████▒▒▒▒▒▒██
+      ░░░█████████████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██
+      ░░░█▒▒▒▒▒▒▒▒▒▒▒▒█▒▒▒▒▒▒▒▒▒█▒▒▒▒▒▒▒▒▒▒▒██
+      ░██▒▒▒▒▒▒▒▒▒▒▒▒▒█▒▒▒██▒▒▒▒▒▒▒▒▒▒██▒▒▒▒██
+      ██▒▒▒███████████▒▒▒▒▒██▒▒▒▒▒▒▒▒██▒▒▒▒▒██
+      █▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒█▒▒▒▒▒▒████████▒▒▒▒▒▒▒██
+      ██▒▒▒▒▒▒▒▒▒▒▒▒▒▒█▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██░
+      ░█▒▒▒███████████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██░░░
+      ░██▒▒▒▒▒▒▒▒▒▒████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒█░░░░░
+      ░░████████████░░░█████████████████░░░░░░
+    </pre>
    <footer>
         <p>Copyright ©2022</p>
     </footer>
