--- a/TagsCSS.html
+++ b/TagsCSS.html
@@ -12,37 +12,109 @@
         <li><a href="index.html" rel="prev">Voltar</a></li>
     </ul>
     <h1>Tags CSS</h1>
-    <p><strong>box-shadow: Xpx Ypx Wpx Zpx rgba(X, Y, W, Z);</strong><br>
-        Sombreamento em volta de algum elemento<br>
-        X é Elemento
+
+    <p>01-<strong>background-color: rgb(169, 228, 178)</strong></p>
+    Está definindo a cor de fundo do site pra rgb(169, 228, 178) <br>
+    A cor pode ser <strong>escrita</strong> de várias formas :<br>
+    yellow, green, etc<br> 
+    hexadecimal ( Ex : #a1d3ef ou a1 é a parte vermelha, d3 parte verde e ef parte azul)<br>
+    rgb(35, 137, 195)<br>
+    rgba (0,0,0,0) onde o último 0 é transparência pode ser 0 até 1<br>
+    hsl(M, S%, L%) = MatizSaturaçãoLuminosidade*<br>
+    hsla ( M, S%, L%, A) onde A é Alpha<br>
+
+    <p>02-<strong>body{ }</strong><br>
+    Alterações no Corpo do site<br>
+    Dentro do body pode ter : <br>
+    background-color: 
     </p>
-    <p><strong>background-color: #XXXXXX;</strong><br>
-        Cor de fundo ( são 6 números )
+
+    <p>03-<strong>box-shadow: Xpx Ypx Wpx Zpx rgba(X, Y, W, Z);</strong><br>
+    Sombreamento em volta de algum elemento<br>
+    X é Elemento
     </p>
-    <p><strong>div#NomeDaDiv { }</strong><br>
-        Aqui eu estou chamando a div NomeDaDiv pra estilizar ela<br>
-        Note que no arquivo css nós apenas chamamos a div, não indicamos qual é a sua classe<br>
-        Dentro da div pode ter :
-        <ul>
-            <li>background-color</li>
-            <li>box-shadow</li>
-            <li>margin</li>
-            <li>padding</li>
-            <li>width</li>
-        </ul>
+
+    <p>04-<strong>background-color: #XXXXXX;</strong><br>
+    Cor de fundo ( são 6 números )
     </p>
-    <p><strong>margin: XXpx auto XXpx auto;</strong><br>
-        Margem : Parte externa de algo<br>
-        Margem de cima, direita, baixo e esquerda<br>
-        Se colocar -210 vai ficar lá encima a margem<br>
+
+    <p>05-<strong>color: cor;</strong><br>
+    Serve pra colorir algo<br>
+    A cor pode ser escrita em :<br>
+    cores em inglês :yellow, blue, red, etc<br>
+    #00ff00<br>
+    rgb(X, Y, Z)<br>
+    hsl(X, Y, Z%)<br>
+    hsla(X, Y, W%, .Z)<br>
+    hwb(Xrad, Y%, W% / Z)<br>
     </p>
-    <p><strong>padding: XXpx YYpx WWpx ZZpx;</strong><br>
-        Distância entre o conteúdo de um elemento e suas bordas<br>
-        Antes as palavras grudavam na parede do site, agora não<br>
-        Se todos valores forem iguais, pode por só uma vez que funciona <br>
+
+    <p>05-<strong>div#NomeDaDiv { }</strong><br>
+    Aqui eu estou chamando a div NomeDaDiv pra estilizar ela<br>
+    Note que no arquivo css nós apenas chamamos a div, não indicamos qual é a sua classe<br>
+    Dentro da div pode ter :<br>
+    < ul><br>
+        < li>background-color< /li><br>
+        < li>box-shadow< /><br>
+        < li>margin< /li><br>
+        < li>padding< /li><br>
+        < li>width< /li><br>
+    < /ul><br>
     </p>
-    <p><strong>width: XXXpx;</strong><br>
-        Largura em pixel
+
+    <p>06-<strong>@font-face { }</strong><br>
+    Aqui eu estou declarando uma regra de fonte no arquivo CSS<br>
+    Dentro de @fonte-face pode ter :<br>
+    font-family: 'nomedafonte';<br>
+    src: url('nomedoarquivo.ttf');<br>
+    </p>
+
+    <p>07-<strong>font-family: 'nomedafonte';</strong><br>
+    Aqui estamos declarando o nome da família da fonte<br>
+    Por padrão o VisualStudioCode ( VSC ) vem com várias, mas a pessoa pode instalar mais<br>
+    Pra declarar fonte veja @font-face { }<br>
+    Site que recomendo é <a href="https://www.dafont.com/pt/" target="_blank">https://www.dafont.com/pt/</a> e o <a href="https://fonts.google.com/" target="_blank">https://fonts.google.com/</a><br>
+    </p>
+
+    <p>08-<strong>font-size: XXpx;</strong><br>
+    Tamanho da fonte ( letra )<br>
+    </p>
+
+    <p>08-<strong>h1 { }</strong><br>
+    Também podemos editar o h1 dentro do arquivo.css, pra fazer isso basta indicar ele no < head>, veja <a href="PaginaHTML.html">PáginaHTML</a> <br>
+    Dentro do h1 podemos ter :<br>
+    font-family: nomedafonte;<br>
+    font-size: XXpx;<br>
+    color:blue;<br>
+    text-shadow: 5px 5px 5px black;<br>
+    /*Define o sombreamento */
+
+    </p>
+    <p>04-<strong>margin: Xpx Ypx Wpx Zpx;</strong><br>
+    Margem : Parte externa de algo<br>
+    Margem de cima, direita, baixo e esquerda<br>
+    Se colocar -210 em Xpx ( margem de cima ) vai ficar lá encima a margem<br>
+    Quanto maior o valor em Ypx ( margem da direita ) mais ela vai encolher pra esquerda<br>
+    Colocando 400 em Zpx ( margem esquerda ) fica muito pra direita<br>
+    Recomendo usar o site do <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS/margin" target="_blank">mozila</a> 
+    </p>
+
+    <p>05-<strong>padding: XXpx YYpx WWpx ZZpx;</strong><br>
+    Distância entre o conteúdo de um elemento e suas bordas<br>
+    Antes as palavras grudavam na parede do site, agora não<br>
+    Se todos valores forem iguais, pode por só uma vez que funciona <br>
+    </p>
+
+    <p>06-<strong>src: url('nomedoarquivo.ttf');</strong></p>
+    O certo nem é 'nomedoarquivo.ttf', mas sim local onde está localizado a fonte + barra ( / ) nomedafonte.ttf<br>
+    Nesse caso que coloquei acima a fonte está localizada na pasta do projeto, então ficou assim<br>
+
+    <p>07-<strong>text-shadow: Xpx Ypx Zpx Cor;</strong><br>
+    Define o sombreamento<br>
+    </p>
+
+    <p>06-<strong>width: XXXpx;</strong><br>
+    Largura em pixel
     </p>
 </body>
 </html>
