--- a/Historico.html
+++ b/Historico.html
@@ -16,6 +16,13 @@
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
 
+    <strong>31/01</strong> 1.7<br>
+    Criado o menu Dicas pra eu postar recomendações de canais pra estudo<br>
+    O site abriu errado no meu celular, tentei consertar não funcionou<br>
+    Página Algoritmo agora está OK<br>
+    Index e estilo.css sem comentários agora<br>
+    Adicionei as imagens que estavam faltando no ProjetoGoogleGlass<br><br>
+
     <strong>30/01</strong> 1.6<br>
     Eu havia esquecido de pular linha da 1.4 pra 1.5, então corrigi isso, ontem continuei focando no CSS<br>
     Criado o ProjetoGoogleGlass, esse projeto faz parte do <a href="https://www.cursoemvideo.com/curso/html5/aulas/html/" target="blank">Curso de HTML 5</a> do Gustavo Guanabara<br>
@@ -28,7 +35,7 @@
     Adicionei opção de voltar em todas páginas<br>
     Criei uma div pra interface, caso não saibam o que é, eu falei em <a href="TagsHTML.html">TagsHTML</a><br>
     Criei o menu TagsCSS onde eu irei por as que eu vou usar<br>
-    Editei a parte de Algoritmo, agora ela está mais organizada<br>
+    Editei a parte de Algoritmo, agora ela está mais organizada<br><br>
 
     <strong>28/01</strong> 1.4<br>
     Bom galera eu tentei reverter o histório, ao invés de ser de cima pra baixo, ser de baixo pra cima, usando comando, mas bugou<br> completamente,<br>
