--- a/ProjetoGoogleGlass.html
+++ b/ProjetoGoogleGlass.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Tudo sobre Google Glass</title>
-    <link rel="stylesheet" type="text/css" href="estilo1.css"/>
+    <link rel="stylesheet" type="text/css" href="estilo09.css"/>
 </head>
 <body> 
 <div id="interface">
@@ -15,7 +15,7 @@
     <h2>A revolução do Google está chegando</h2>
     </hgroup>
 
-    <img id="icone" src="_imagens/glass-oculos-preto-peq.png"/>
+    <img id="icone" src="glass-oculos-preto-peq.png"/>
     <nav id="menu">  
     <h1>Menu Principal</h1>
     <ul type="disc">
@@ -53,7 +53,7 @@
 <p>O <span style="font-weight:900;">Google Glass</span>é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href=""><i>Project Glass</i></a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;conferên&shy;cias. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. <U>Atualmente</U> o <em>Google Glass</em> encontra-se em <span style="text-decoration: overline;">fase de testes</span> e já possui um vídeo totalmente gravado com o dispositivo. <s>Além disso</s>, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o <del>acessório</del>.</p>
 
 <figure class="foto-legenda">
-    <img src="_imagens/glass-quadro-homem-mulhermenor.jpg">
+    <img src="glass-quadro-homem-mulhermenor.jpg">
     <figcaption>
         <h3>Google Glass</h3>
     <p>Uma nova maneira de ver o mundo</p>
