--- a/Algoritmo.html
+++ b/Algoritmo.html
@@ -1,304 +1,313 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Algoritmo</title>
-    <link rel="stylesheet" href="estilo.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=0.5">
+	<title>Algoritmo</title>
+	<link rel="stylesheet" href="estilo.css">
 </head>
+
 <body>
 	<ul>
-        <li><a href="index.html" rel="prev">Voltar</a></li>
-    </ul>
-	<div id="interface">
+		<li><a href="index.html" rel="prev">Voltar</a></li>
+	</ul>
+	<div id="interface1"></div>
 	<h1>Algoritmo</h1>
 	<h2>Revisão Lógica de Programação Algoritmo</h2>
-    <h3>!!! Usando Visualg  !!!</h3>
+	<h3>!!! Usando Visualg !!!</h3>
 
-	<p><br>
-	algoritmo "Nome do Algoritmo"<br>
-	var<br>
-	indentificador : tipo<br>
-	inicio<br>
-	Comandos de Saída<br>
-	fimalgoritmo
-	</p>
+	<p>algoritmo "Nome do Algoritmo"</p>
+	<p>var</p>
+	<p>indentificador : tipo</p>
+	<p>inicio</p>
+	<p>Comandos de Saída</p>
+	<p>fimalgoritmo</p>
 
----------------------------------
-<p>0-Comandos :</p>
 
-! dps CTRL+Espaço = Cria um modelo de pseudocódigo 
-algoritmo "semnome"</p>
-*
-<p>inicio</p>
-</p>fimalgoritmo</p>
+	<p>0-<strong>Comandos</strong> :</p>
 
-</p># dps CTRL+Espaço = Cria um cabeçalho de programa</p>
-</p>// Algoritmo : *</p>
-</p>// Função :</p>
-</p>// Autor :</p>
-</p>// Data </p>
+	<p>! dps CTRL+Espaço = Cria um modelo de pseudocódigo
+		algoritmo "semnome"</p>
 
-</p>CTRL +</p>
+	<p>inicio</p>
+	<p>fimalgoritmo</p>
 
-</p>F2 = Termina imediatamente a execução do pseudocódigo. Evidentemente, este botão fica desabilitado quando o pseudocódigo não está sendo executado.</p>
+	<p># dps CTRL+Espaço = Cria um cabeçalho de programa</p>
+	<p>// Algoritmo : *</p>
+	<p>// Função :</p>
+	<p>// Autor :</p>
+	<p>// Data </p>
 
-</p>F3 = Exibe a pilha de subprogramas ativados num dado momento. Convém utilizar este comando em conjunto com breakpoints ou com a execução passo a passo.</p>
+	<p><strong>CTRL +</strong></p>
 
-F5 = Desativa todos os breakpoints que estejam ativados naquele momento. </p>
+	<p>F2 = Termina imediatamente a execução do pseudocódigo. Evidentemente, este botão fica desabilitado quando o
+		pseudocódigo não está sendo executado.</p>
 
-A = Abre um arquivo anteriormente gravado, substituindo o texto presente no editor. Se este tiver sido modificado, o VisuAlg pedirá sua confirmação para salvá-lo antes que seja sobreposto.</p>
+	<p>F3 = Exibe a pilha de subprogramas ativados num dado momento. Convém utilizar este comando em conjunto com
+		breakpoints ou com a execução passo a passo.</p>
 
-C = Copia o texto selecionado para a área de transferência.</p>
+	<p>F5 = Desativa todos os breakpoints que estejam ativados naquele momento. </p>
 
-G = Corrige automaticamente a indentação (ou tabulação) do pseudocódigo, tabulando cada comando interno com espaços à esquerda.</p>
+	<p>A = Abre um arquivo anteriormente gravado, substituindo o texto presente no editor. Se este tiver sido
+		modificado, o VisuAlg pedirá sua confirmação para salvá-lo antes que seja sobreposto.</p>
 
-L = Localiza no texto presente no editor determinada palavra especificada.</p>
+	<p>C = Copia o texto selecionado para a área de transferência.</p>
 
-N = Cria um novo "esqueleto" de pseudocódigo, substituindo o texto presente no editor. Se este tiver sido modificado, o VisuAlg pedirá sua confirmação para salvá-lo antes que seja sobreposto.</p>
+	<p>G = Corrige automaticamente a indentação (ou tabulação) do pseudocódigo, tabulando cada comando interno com
+		espaços à esquerda.</p>
 
-P = Impressão</p>
+	<p>L = Localiza no texto presente no editor determinada palavra especificada.</p>
 
-S = Grava imediatamente o texto presente no editor. Na primeira vez que um novo texto é gravado, o VisuAlg pede seu nome e localização.
-Imprimir: Imprime imediatamente na impressora padrão o texto presente no editor. Para configurar a impressão, use o comando Imprimir do menu Arquivo (acessível também pelo atalho Ctrl-P)</p>
+	<p>N = Cria um novo "esqueleto" de pseudocódigo, substituindo o texto presente no editor. Se este tiver sido
+		modificado, o VisuAlg pedirá sua confirmação para salvá-lo antes que seja sobreposto.</p>
 
-U = Localiza no texto presente no editor determinada palavra especificada, substituindo-a por outra.</p>
+	<p>P = Impressão</p>
 
-V = Copia texto da área de transferência para o local em que está o cursor.</p>
+	S = Grava imediatamente o texto presente no editor. Na primeira vez que um novo texto é gravado, o VisuAlg pede seu
+	nome e localização.
+	Imprimir: Imprime imediatamente na impressora padrão o texto presente no editor. Para configurar a impressão, use o
+	comando Imprimir do menu Arquivo (acessível também pelo atalho Ctrl-P)</p>
 
-X = Apaga texto selecionado, armazenando-o em uma área de transferência.</p>
+	U = Localiza no texto presente no editor determinada palavra especificada, substituindo-a por outra.</p>
 
-Z = Desfaz último comando efetuado.</p>
+	V = Copia texto da área de transferência para o local em que está o cursor.</p>
 
-Abrir (Ctrl-A): </p>
-Novo (Ctrl-N): </p>
-Salvar (Ctrl-S): .</p>
-Cortar (Ctrl-X):</p>
-Copiar (Ctrl-C): </p>
-Colar (Ctrl-V): </p>
-Desfazer (Ctrl-Z): </p>
-Localizar (Ctrl-L): </p>
-Substituir (Ctrl-U): </p>
-Refazer (Shift-Ctrl-Z): Refaz último comando desfeito.</p>
+	X = Apaga texto selecionado, armazenando-o em uma área de transferência.</p>
 
-1-Dicas :</p>
+	Z = Desfaz último comando efetuado.</p>
 
-Caso esteja em branco : ! + CNTRL Espaço</p>
-Isso faz com que seja preenchido o Visualg</p>
+	Abrir (Ctrl-A): </p>
+	Novo (Ctrl-N): </p>
+	Salvar (Ctrl-S): .</p>
+	Cortar (Ctrl-X):</p>
+	Copiar (Ctrl-C): </p>
+	Colar (Ctrl-V): </p>
+	Desfazer (Ctrl-Z): </p>
+	Localizar (Ctrl-L): </p>
+	Substituir (Ctrl-U): </p>
+	Refazer (Shift-Ctrl-Z): Refaz último comando desfeito.</p>
 
-2-Comentários :</p>
-// Isso é um comentário </p>
+	1-Dicas :</p>
 
-3-Variáveis :</p>
+	Caso esteja em branco : ! + CNTRL Espaço</p>
+	Isso faz com que seja preenchido o Visualg</p>
 
-var </p>
+	2-Comentários :</p>
+	// Isso é um comentário </p>
+
+	3-Variáveis :</p>
+
+	var </p>
 	indentificador : tipo</p>
-Ex: 	N1, N2, N3: Inteiro</p>
+	Ex: N1, N2, N3: Inteiro</p>
 
-Variáveis são espaços na memória que vão guardar valores
-Exemplo : msg: Caractere</p>
-Se eu der o comando </p>
+	Variáveis são espaços na memória que vão guardar valores
+	Exemplo : msg: Caractere</p>
+	Se eu der o comando </p>
 	Escreval(msg)</p>
-Vai escrever o conteúdo da variável msg que é msg</p>
+	Vai escrever o conteúdo da variável msg que é msg</p>
 
-4-Identificadores :</p>
+	4-Identificadores :</p>
 
-1-Deve começar com uma letra</p>
-2-Os próximos caracteres podem ser letras ou números</p>
-3-Não se pode utilizar nenhum símbolo, excete _ ( underline )</p>
-4-Não pode conter espaços em branco</p>
-5-Não pode conter letras com acentos</p>
-6-Não pode ser uma palavra reservada</p>
+	1-Deve começar com uma letra</p>
+	2-Os próximos caracteres podem ser letras ou números</p>
+	3-Não se pode utilizar nenhum símbolo, excete _ ( underline )</p>
+	4-Não pode conter espaços em branco</p>
+	5-Não pode conter letras com acentos</p>
+	6-Não pode ser uma palavra reservada</p>
 
-5-Tipos > Primitivos:</p>
+	5-Tipos > Primitivos:</p>
 
-OBS 1 : No portugal não se usa , ( vírgula ) e sim . ( ponto )</p>
-OBS 2 : Dentro de "aspas" pode utilizar tudo</p>
+	OBS 1 : No portugal não se usa , ( vírgula ) e sim . ( ponto )</p>
+	OBS 2 : Dentro de "aspas" pode utilizar tudo</p>
 
--Inteiro : Ex -3,1,0,</p>
--Real 	: Ex 0.5, 5.0, -77.4, 3.1415</p>
--Caractere : Ex "Gustavo" "Algoritmo" "123"</p>
--Logico : Ex verdadeiro e falso</p>
--Palavra reservada : sublinhada com tom de azul .Exemplos : algoritmo, inicio, var</p>
+	-Inteiro : Ex -3,1,0,</p>
+	-Real : Ex 0.5, 5.0, -77.4, 3.1415</p>
+	-Caractere : Ex "Gustavo" "Algoritmo" "123"</p>
+	-Logico : Ex verdadeiro e falso</p>
+	-Palavra reservada : sublinhada com tom de azul .Exemplos : algoritmo, inicio, var</p>
 
-6-Comandos de Saída : Ficam na área inicio</p>
+	6-Comandos de Saída : Ficam na área inicio</p>
 
-1-Escreva ("Mensagem qualquer")</p>
-Vai escrever Mensagem qualquer</p>
-2-Escreval ("Mensagem qualquer")</p>
-Vai escrever Mensagem qualquer e saltar pra linha de baixo
-3-Leia(variável)</p>
-Vai guardar na memória a variável</p>
-4-Variável <- Operação</p>
-Ex: S <- n1 + n2</p>
+	1-Escreva ("Mensagem qualquer")</p>
+	Vai escrever Mensagem qualquer</p>
+	2-Escreval ("Mensagem qualquer")</p>
+	Vai escrever Mensagem qualquer e saltar pra linha de baixo
+	3-Leia(variável)</p>
+	Vai guardar na memória a variável</p>
+	4-Variável <- Operação</p>
+		Ex: S <- n1 + n2</p>
 
-7-Operadores Aritméticos : 7</p>
-Sendo Ex A = 5 e B = 2</p>
-5 | 2</p>
-1   2</p>
-Dividendo 5</p>
-Divisor 2</p>
-Quociente 2</p>
-Resto 1</p>
+			7-Operadores Aritméticos : 7</p>
+			Sendo Ex A = 5 e B = 2</p>
+			5 | 2</p>
+			1 2</p>
+			Dividendo 5</p>
+			Divisor 2</p>
+			Quociente 2</p>
+			Resto 1</p>
 
-1-Adição + = A + B > 7</p>
-2-Subtração - = A - B : 3</p>
-3-Multiplicação * = A * B > 10</p>
-4-Divisão / = A / B > 2.5</p>
-5-Divisão Inteira \ = A \ B > 2</p>
-Quociente da Divisão 5 / 2</p>
-6-Exponenciação ^ = A ^ B > 25</p>
-7-Módulo % = A % B > 1</p>
-Resto da Divisão 5 / 2</p>
+			1-Adição + = A + B > 7</p>
+			2-Subtração - = A - B : 3</p>
+			3-Multiplicação * = A * B > 10</p>
+			4-Divisão / = A / B > 2.5</p>
+			5-Divisão Inteira \ = A \ B > 2</p>
+			Quociente da Divisão 5 / 2</p>
+			6-Exponenciação ^ = A ^ B > 25</p>
+			7-Módulo % = A % B > 1</p>
+			Resto da Divisão 5 / 2</p>
 
-8-Ordem de Precedência :</p>
-1-Parênteses ( )</p>
-2-Exponenciação ^</p>
-3-Multiplicação / Divisão * /</p>
-4-Adição / Subtração + - </p>
-Ex :	3 + 2 / 2 </p>
-	3 + 1 </p>
-	4</p>
-Ex : 	(3 + 2) / 2 </p>
-	5 / 2</p>
-	2.5</p>
+			8-Ordem de Precedência :</p>
+			1-Parênteses ( )</p>
+			2-Exponenciação ^</p>
+			3-Multiplicação / Divisão * /</p>
+			4-Adição / Subtração + - </p>
+			Ex : 3 + 2 / 2 </p>
+			3 + 1 </p>
+			4</p>
+			Ex : (3 + 2) / 2 </p>
+			5 / 2</p>
+			2.5</p>
 
-9-Funções Aritméticas :</p>
+			9-<strong>Funções Aritméticas</strong> :</p>
 
-1-Valor Absoluto = Abs(-10) = 10</p>
-Valor positivo</p>
-2-Exponenciação = Exp(3,2) = 9</p>
-3² = 9</p>
-3-Valor Inteiro = Int(3.9) = 3</p>
-Somente a parte inteira</p>
-4-Raiz Quadrada = RaizQ(25) > 5</p>
-5-Retorna Pi = Pi > 3.1415</p>
-6-Seno (rad) = Sen(0.523) > 0.5</p>
-7-Cosseno (rad) = Cos(0.523) > 0.86</p>
-8-Tangente (rad) = Tag(0.523) > 0.57</p>
-9-Graus para Rad = GraupRad(30) > 0.523</p>
+			1-Valor Absoluto = Abs(-10) = 10</p>
+			Valor positivo</p>
+			2-Exponenciação = Exp(3,2) = 9</p>
+			3² = 9</p>
+			3-Valor Inteiro = Int(3.9) = 3</p>
+			Somente a parte inteira</p>
+			4-Raiz Quadrada = RaizQ(25) > 5</p>
+			5-Retorna Pi = Pi > 3.1415</p>
+			6-Seno (rad) = Sen(0.523) > 0.5</p>
+			7-Cosseno (rad) = Cos(0.523) > 0.86</p>
+			8-Tangente (rad) = Tag(0.523) > 0.57</p>
+			9-Graus para Rad = GraupRad(30) > 0.523</p>
 
-10-Operadores Relacionais : </p>
+			10-Operadores Relacionais : </p>
 
-1-Maior que ></p>
-2-Menor que <</p>
-3-Maior ou igual a >=</p>
-4-Menor ou igual a <=</p>
-5-Igual a =</p>
-6-Diferente de <></p>
+			1-Maior que ></p>
+			2-Menor que << /p>
+				3-Maior ou igual a >=</p>
+				4-Menor ou igual a <=< /p>
+					5-Igual a =</p>
+					6-Diferente de <>
+						</p>
 
-11-Operadores Lógicos :</p>
+						11-Operadores Lógicos :</p>
 
--Operador E = Eu quero que as 2 sejam V</p>
--Se p e q são V, logo p e q é Verdadeiro</p>
--Se p for V e q for F, logo p e q é Falso</p>
--Se p for F e q for V, logo p e q é F</p>
--Se p for F e q for F, logo p e q é F</p>
+						-Operador E = Eu quero que as 2 sejam V</p>
+						-Se p e q são V, logo p e q é Verdadeiro</p>
+						-Se p for V e q for F, logo p e q é Falso</p>
+						-Se p for F e q for V, logo p e q é F</p>
+						-Se p for F e q for F, logo p e q é F</p>
 
--Operador OU = Eu quero que p /q seja V</p>
--Se p e q são V, logo p ou q é Verdadeiro</p>
--Se p for V e q for F, logo p ou q é V</p>
--Se p for F e q for F, logo p ou q é V</p>
--Se p for F e q for F, logo p ou q é F</p>
+						-Operador OU = Eu quero que p /q seja V</p>
+						-Se p e q são V, logo p ou q é Verdadeiro</p>
+						-Se p for V e q for F, logo p ou q é V</p>
+						-Se p for F e q for F, logo p ou q é V</p>
+						-Se p for F e q for F, logo p ou q é F</p>
 
--Operador Não = É o contrário</p>
--Se p for V, logo Não p é F</p>
--Se q for F, logo Não q é V</p>
+						-Operador Não = É o contrário</p>
+						-Se p for V, logo Não p é F</p>
+						-Se q for F, logo Não q é V</p>
 
-12-Ordem de Precedência :</p>
+						12-Ordem de Precedência :</p>
 
-1° Aritméticos : (), ^,*/, e +-</p>
-2° Relacionais : Todos</p>
-3° Lógicos : E, OU e Não</p>
+						1° Aritméticos : (), ^,*/, e +-</p>
+						2° Relacionais : Todos</p>
+						3° Lógicos : E, OU e Não</p>
 
-<strong>13-Estruturas Condicionais : </strong></p>
+						<strong>13-Estruturas Condicionais : </strong></p>
 
-Se ( expressão ) entao</p>
-----Bloco A</p>
-FimSe</p>
-Se algo acontecer, então vai acontecer o Bloco A</p>
+						Se ( expressão ) entao</p>
+						----Bloco A</p>
+						FimSe</p>
+						Se algo acontecer, então vai acontecer o Bloco A</p>
 
-Se ( expressão ) entao</p>
-----Bloco A</p>
-senao</p>
-----Bloco B</p>
-FimSe</p>
-Se algo acontecer, então vai acontecer o Bloco A, senão vai acontecer o Bloco B</p>
+						Se ( expressão ) entao</p>
+						----Bloco A</p>
+						senao</p>
+						----Bloco B</p>
+						FimSe</p>
+						Se algo acontecer, então vai acontecer o Bloco A, senão vai acontecer o Bloco B</p>
 
-Condicional Simples : Se ... entao</p>
-... Composta : Se ... entao ... senao</p>
+						Condicional Simples : Se ... entao</p>
+						... Composta : Se ... entao ... senao</p>
 
-Se (situação 1) então</p>
-----Bloco A</p>
-senao
-	Se (situação 2) entao</p>
---------Bloco B</p>
-	senao</p>
---------Bloco C</p>
-	FimSe</p>
-FimSe</p>
+						Se (situação 1) então</p>
+						----Bloco A</p>
+						senao
+						Se (situação 2) entao</p>
+						--------Bloco B</p>
+						senao</p>
+						--------Bloco C</p>
+						FimSe</p>
+						FimSe</p>
 
-Temos 2 condições( se ... então...senão e Se ... então ), então 2 FimSe</p>
+						Temos 2 condições( se ... então...senão e Se ... então ), então 2 FimSe</p>
 
-Se (situação 1) então</p>
-	Bloco A</p>
-senao
-	Se (situação 2) entao</p>
-		Bloco B</p>
-	senao</p>
-		Bloco C</p>
-		Se ( situação 3) então</p>
-		Bloco D	</p>
-		FimSe</p>
-	FimSe</p>
-FimSe</p>
+						Se (situação 1) então</p>
+						Bloco A</p>
+						senao
+						Se (situação 2) entao</p>
+						Bloco B</p>
+						senao</p>
+						Bloco C</p>
+						Se ( situação 3) então</p>
+						Bloco D </p>
+						FimSe</p>
+						FimSe</p>
+						FimSe</p>
 
-Temos 3 condições( se ... então...senão, Se ... então..senao e Se...então), então 3 FimSe</p>
+						Temos 3 condições( se ... então...senão, Se ... então..senao e Se...então), então 3 FimSe</p>
 
-<strong>14-Função Escolha :</strong></p>
+						<strong>14-Função Escolha :</strong></p>
 
-Escolha (variável)</p>
-	Caso valor</p>
-		Bloco A</p>
-	Caso valor</p>
-		Bloco B</p>
-	Caso valor</p>
-		Bloco C</p>
-	OutroCaso</p>
-		BlocoD</p>
-FimEscolha</p>
+						Escolha (variável)</p>
+						Caso valor</p>
+						Bloco A</p>
+						Caso valor</p>
+						Bloco B</p>
+						Caso valor</p>
+						Bloco C</p>
+						OutroCaso</p>
+						BlocoD</p>
+						FimEscolha</p>
 
-Função funciona somente valores inteiros !!!</p>
+						Função funciona somente valores inteiros !!!</p>
 
-<strong>15-Estruturas de Repetição 1</strong></p>
+						<strong>15-Estruturas de Repetição 1</strong></p>
 
-Exemplo 01 :</p>
-Enquanto expressão faça</p>
-	bloco</p>
-FimEnquanto</p>
+						Exemplo 01 :</p>
+						Enquanto expressão faça</p>
+						bloco</p>
+						FimEnquanto</p>
 
-Exemplo 02 :</p>
+						Exemplo 02 :</p>
 
-variável <- 0</p>
-Enquanto (variável <= número) faça</p>
-	Mensagem(variável)</p>
-	variável <- variável + 1</p>
-FimEnquanto</p>
+						variável <- 0</p>
+							Enquanto (variável <= número) faça</p>
+								Mensagem(variável)</p>
+								variável <- variável + 1</p>
+									FimEnquanto</p>
 
-Exemplo 03 :</p>
+									Exemplo 03 :</p>
 
-cont <- 1</p>
-s <- 0</p>
-Enquanto (cont <= 10 ) faça</p>
-	Escreval("Digite ", cont)</p>
-	Leia(N)</p>
-	Se ( N > maior ) então</p>
-		maior <- N</p>
-	FimSe</p>
-	S <- S + N</p>
-	cont <- cont + 1</p>
-FimEnquanto</p>
-</div>
+									cont <- 1</p>
+										s <- 0</p>
+											Enquanto (cont <= 10 ) faça</p>
+												Escreval("Digite ", cont)</p>
+												Leia(N)</p>
+												Se ( N > maior ) então</p>
+												maior <- N</p>
+													FimSe</p>
+													S <- S + N</p>
+														cont <- cont + 1</p>
+															FimEnquanto</p>
+															</div>
 </body>
+
 </html>
