--- a/Atalhos.html
+++ b/Atalhos.html
@@ -12,7 +12,10 @@
         <li><a href="index.html" rel="prev">Voltar</a></li>
     </ul>
     
-    <h1>Atalhos</h1>
+    <h1>Atalhos PC</h1>
+    CTRL + < = Voltar a página anterior<br>
+    
+    <h1>Atalhos Visual Studio Code</h1>
 
     <p>CTRL Click<br>
     Escolha uma palavra e segure CTRL e depois clique nela com o botão esquerdo do mouse, isso irá seguir<br>
