--- a/Historico.html
+++ b/Historico.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Histórico</title>
     <link rel="stylesheet" href="estilo.css">
-    <!--Aqui eu estou dizendo pro Navegador usar o estilo do arquivo estilo.css-->
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
@@ -15,6 +15,14 @@
     </ul>
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
+
+    <strong>01/02</strong> 1.8<br>
+    Primeiramente tentei corrigir o problema do ProjetoGoogleGlass, não consegui, resolvi dar continuidade<br> ao curso, futuramente eu resolvo ele.<br>
+    Criado o menu Python, pois como eu treino no celular com o aplicativo QPython 3L, dai eu esqueço os<br> comandos, pois estudo muitas linguagens.<br>
+    Ontem o dia começou bem, mas quando voltei da caminhada/corrida fiquei de 18:00 até as 21:00 sem energia<br> pra trabalhar, pois o gerador(do condomínio) parou de funcionar do nada.<br>
+    Coloquei o favicon em quase todas páginas, a do Python não funcionou, eu acho que precisa adicionar texto<br>
+    Coloquei também o comando CTRL + F5 em Atalhos pois eu me esqueci, isso salvou um dia ai que tive problema<br> com o favicon<br>
+    Aos poucos estou removendo os comentários do ProjetoGoogleGlass e adicionando mais tags em CSS ou HTML<br><br>
 
     <strong>31/01</strong> 1.7<br>
     Criado o menu Dicas pra eu postar recomendações de canais pra estudo<br>
@@ -53,7 +61,7 @@
     -Removi todos comentários da página principal<br><br>
 
     <strong>26/01</strong> 1.2<br>
-    Corrigi o problema do favicon que não aparecia, era pra apertar F5, isso apaga os dados salvos do site<br>
+    Corrigi o problema do favicon que não aparecia, era pra apertar CTRL + F5, isso apaga os dados salvos do site<br>
     Editei os menus acima pra diminuir<br> o tanto de coisas na tela<br>
     Agora temos :<br> 
     ProjetoAlfa ( quero basicamente escrever todas letras em todos idiomas ),<br> 
