--- a/PaginaHTML.html
+++ b/PaginaHTML.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.5">
     <title>PaginaHTML</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
