--- a/ProjetoGoogleGlass.html
+++ b/ProjetoGoogleGlass.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Tudo sobre Google Glass</title>
     <link rel="stylesheet" type="text/css" href="estilo09.css"/>
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body> 
 <div id="interface">
@@ -20,8 +21,6 @@
     <h1>Menu Principal</h1>
     <ul type="disc">
         <li><a href="index.html">Home</a></li>
-        <!--<a href="NomeDoDocumento">Home</a> = Isso irá criar um link pra abrir o arquivo que está na pasta do Projeto-->
-        <!--<a href="LocaldoDocumento">Home</a> = Isso irá criar um link pra abrir o arquivo que está na pasta do Projeto-->
         <li><a href="specs.html">Especificações</a></li>
         <li><a href="fotos.html">Fotos</a></li>
         <li><a href="multimidia.html">Multimídia</a></li>
