--- a/Algoritmo.html
+++ b/Algoritmo.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=0.5">
 	<title>Algoritmo</title>
 	<link rel="stylesheet" href="estilo.css">
+	<link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
