--- a/NomeIdiomas.html
+++ b/NomeIdiomas.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NomeIdiomas</title>
     <link rel="stylesheet" href="estilo.css">
-    <!--Aqui eu estou dizendo pro Navegador usar o estilo do arquivo estilo.css-->
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
