--- a/Dicas.html
+++ b/Dicas.html
@@ -6,12 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dicas</title>
     <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilo04.css">
 </head>
 <body>
     <ul>
-        <li><a href="index.html" rel="prev">Voltar</a></li>
-    </ul>
+		<li><a href="index.html" rel="prev">Voltar</a></li>
+	</ul>
+	<ul>
+		<li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
+        <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
+        <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
+        <li><a href="Dicas.html">Dicas</a></li>
+        <li><a href="Historico.html" rel="next">Histórico</a></li>
+        <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
+        <li><a href="PaginaHTML.html" rel="next">PáginaHTML</a></li>
+        <li><a href="ProjetoAlfa.html" rel="next">ProjetoAlfa</a></li>
+        <li><a href="ProjetoGoogleGlass.html">ProjetoGoogleGlass</a></li>
+        <li><a href="Python.html" rel="next">Python</a></li>
+        <li><a href="TagsCSS.html"rel="next">TagsCSS</a></li>
+        <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
+        <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
+	</ul>
+    <div id="interface">
     <h1>Dicas</h1>
     <p>Lembrando que : Não testei todos sites e coloquei os principais estudos para futuros programadores</p>
     <h3>Minha recomendação :</h3>
@@ -53,5 +69,6 @@
     <h2>Didática Tech</h2>
     <p>Python Machine Learning</p>
     <p>Link : <a href="https://www.youtube.com/playlist?list=PLyqOvdQmGdTR46HUxDA6Ymv4DGsIjvTQ-" target="_blank">https://www.youtube.com/playlist?list=PLyqOvdQmGdTR46HUxDA6Ymv4DGsIjvTQ-</a></p>
+</div>
 </body>
 </html>
