--- a/NomeIdiomas.html
+++ b/NomeIdiomas.html
@@ -5,14 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NomeIdiomas</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilo06.css">
     <link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
     <ul>
-        <li><a href="index.html" rel="prev">Voltar</a></li>
-    </ul>
+		<li><a href="index.html" rel="prev">Voltar</a></li>
+	</ul>
+	<ul>
+		<li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
+        <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
+        <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
+        <li><a href="Dicas.html">Dicas</a></li>
+        <li><a href="Historico.html" rel="next">Histórico</a></li>
+        <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
+        <li><a href="PaginaHTML.html" rel="next">PáginaHTML</a></li>
+        <li><a href="ProjetoAlfa.html" rel="next">ProjetoAlfa</a></li>
+        <li><a href="ProjetoGoogleGlass.html">ProjetoGoogleGlass</a></li>
+        <li><a href="Python.html" rel="next">Python</a></li>
+        <li><a href="TagsCSS.html"rel="next">TagsCSS</a></li>
+        <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
+        <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
+	</ul>
+    <div id="interface">
     <h1 align="center"><strong>Meu nome em vários idiomas</strong></h1>
 
     <p>1-Américo : ዳንኤል dani’ēli</p>
@@ -75,5 +91,6 @@
     57-Xona : Dhanieri</p>
     58-Zulu : UDaniel</p>
     59 idiomas Pq eu estava traduzindo do Português<br>
+</div>
 </body>
 </html>
