--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
         <li><a href="Dicas.html">Dicas</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
+        <li><a href="MySQL.html">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
         <li><a href="PaginaHTML.html" rel="next">PáginaHTML</a></li>
         <li><a href="ProjetoAlfa.html" rel="next">ProjetoAlfa</a></li>
@@ -24,6 +25,7 @@
         <li><a href="Python.html" rel="next">Python</a></li>
         <li><a href="TagsCSS.html"rel="next">TagsCSS</a></li>
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
+        <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
     </ol>
 
     <div id="interface">
