--- a/Algoritmo.html
+++ b/Algoritmo.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=0.5">
 	<title>Algoritmo</title>
-	<link rel="stylesheet" href="estilo.css">
+	<link rel="stylesheet" href="estilo01.css">
 	<link rel="shortcut icon" href="favicon.ico">
 </head>
 
@@ -14,7 +14,23 @@
 	<ul>
 		<li><a href="index.html" rel="prev">Voltar</a></li>
 	</ul>
-	<div id="interface1"></div>
+	<ul>
+		<li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
+        <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
+        <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
+        <li><a href="Dicas.html">Dicas</a></li>
+        <li><a href="Historico.html" rel="next">Histórico</a></li>
+        <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
+        <li><a href="PaginaHTML.html" rel="next">PáginaHTML</a></li>
+        <li><a href="ProjetoAlfa.html" rel="next">ProjetoAlfa</a></li>
+        <li><a href="ProjetoGoogleGlass.html">ProjetoGoogleGlass</a></li>
+        <li><a href="Python.html" rel="next">Python</a></li>
+        <li><a href="TagsCSS.html"rel="next">TagsCSS</a></li>
+        <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
+        <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
+	</ul>
+
+	<div id="interface">
 	<h1>Algoritmo</h1>
 	<h2>Revisão Lógica de Programação Algoritmo</h2>
 	<h3>!!! Usando Visualg !!!</h3>
@@ -30,7 +46,7 @@
 	<p>0-<strong>Comandos</strong> :</p>
 
 	<p>! dps CTRL+Espaço = Cria um modelo de pseudocódigo
-		algoritmo "semnome"</p>
+	algoritmo "semnome"</p>
 
 	<p>inicio</p>
 	<p>fimalgoritmo</p>
@@ -43,33 +59,32 @@
 
 	<p><strong>CTRL +</strong></p>
 
-	<p>F2 = Termina imediatamente a execução do pseudocódigo. Evidentemente, este botão fica desabilitado quando o
-		pseudocódigo não está sendo executado.</p>
+	<p>F2 = Termina imediatamente a execução do pseudocódigo. Evidentemente, este botão<br> fica desabilitado quando o
+	pseudocódigo não está sendo executado.</p>
 
-	<p>F3 = Exibe a pilha de subprogramas ativados num dado momento. Convém utilizar este comando em conjunto com
-		breakpoints ou com a execução passo a passo.</p>
+	<p>F3 = Exibe a pilha de subprogramas ativados num dado momento. Convém utilizar este<br> comando em conjunto com
+	breakpoints ou com a execução passo a passo.</p>
 
 	<p>F5 = Desativa todos os breakpoints que estejam ativados naquele momento. </p>
 
-	<p>A = Abre um arquivo anteriormente gravado, substituindo o texto presente no editor. Se este tiver sido
-		modificado, o VisuAlg pedirá sua confirmação para salvá-lo antes que seja sobreposto.</p>
+	<p>A = Abre um arquivo anteriormente gravado, substituindo o texto presente no editor. Se<br> este tiver sido
+	modificado, o VisuAlg pedirá sua confirmação para salvá-lo antes que<br> seja sobreposto.</p>
 
 	<p>C = Copia o texto selecionado para a área de transferência.</p>
 
-	<p>G = Corrige automaticamente a indentação (ou tabulação) do pseudocódigo, tabulando cada comando interno com
-		espaços à esquerda.</p>
+	<p>G = Corrige automaticamente a indentação (ou tabulação) do pseudocódigo, tabulando cada<br> comando interno com espaços à esquerda.</p>
 
 	<p>L = Localiza no texto presente no editor determinada palavra especificada.</p>
 
-	<p>N = Cria um novo "esqueleto" de pseudocódigo, substituindo o texto presente no editor. Se este tiver sido
-		modificado, o VisuAlg pedirá sua confirmação para salvá-lo antes que seja sobreposto.</p>
+	<p>N = Cria um novo "esqueleto" de pseudocódigo, substituindo o texto presente no editor. Se<br> este tiver sido
+	modificado, o VisuAlg pedirá sua confirmação para salvá-lo antes que seja sobreposto.</p>
 
 	<p>P = Impressão</p>
 
-	S = Grava imediatamente o texto presente no editor. Na primeira vez que um novo texto é gravado, o VisuAlg pede seu
+	S = Grava imediatamente o texto presente no editor. Na primeira vez que um novo texto é gravado,<br> o VisuAlg pede seu
 	nome e localização.
-	Imprimir: Imprime imediatamente na impressora padrão o texto presente no editor. Para configurar a impressão, use o
-	comando Imprimir do menu Arquivo (acessível também pelo atalho Ctrl-P)</p>
+	Imprimir: Imprime imediatamente na impressora padrão o<br> texto presente no editor. Para configurar a impressão, use o
+	comando Imprimir do menu Arquivo<br> (acessível também pelo atalho Ctrl-P)</p>
 
 	U = Localiza no texto presente no editor determinada palavra especificada, substituindo-a por outra.</p>
 
@@ -139,148 +154,147 @@
 	3-Leia(variável)</p>
 	Vai guardar na memória a variável</p>
 	4-Variável <- Operação</p>
-		Ex: S <- n1 + n2</p>
+	Ex: S <- n1 + n2</p>
 
-			7-Operadores Aritméticos : 7</p>
-			Sendo Ex A = 5 e B = 2</p>
-			5 | 2</p>
-			1 2</p>
-			Dividendo 5</p>
-			Divisor 2</p>
-			Quociente 2</p>
-			Resto 1</p>
+	7-Operadores Aritméticos : 7</p>
+	Sendo Ex A = 5 e B = 2</p>
+	5 | 2</p>
+	1 2</p>
+	Dividendo 5</p>
+	Divisor 2</p>
+	Quociente 2</p>
+	Resto 1</p>
 
-			1-Adição + = A + B > 7</p>
-			2-Subtração - = A - B : 3</p>
-			3-Multiplicação * = A * B > 10</p>
-			4-Divisão / = A / B > 2.5</p>
-			5-Divisão Inteira \ = A \ B > 2</p>
-			Quociente da Divisão 5 / 2</p>
-			6-Exponenciação ^ = A ^ B > 25</p>
-			7-Módulo % = A % B > 1</p>
-			Resto da Divisão 5 / 2</p>
+	1-Adição + = A + B > 7</p>
+	2-Subtração - = A - B : 3</p>
+	3-Multiplicação * = A * B > 10</p>
+	4-Divisão / = A / B > 2.5</p>
+	5-Divisão Inteira \ = A \ B > 2</p>
+	Quociente da Divisão 5 / 2</p>
+	6-Exponenciação ^ = A ^ B > 25</p>
+	7-Módulo % = A % B > 1</p>
+	Resto da Divisão 5 / 2</p>
 
-			8-Ordem de Precedência :</p>
-			1-Parênteses ( )</p>
-			2-Exponenciação ^</p>
-			3-Multiplicação / Divisão * /</p>
-			4-Adição / Subtração + - </p>
-			Ex : 3 + 2 / 2 </p>
-			3 + 1 </p>
-			4</p>
-			Ex : (3 + 2) / 2 </p>
-			5 / 2</p>
-			2.5</p>
+	8-Ordem de Precedência :</p>
+	1-Parênteses ( )</p>
+	2-Exponenciação ^</p>
+	3-Multiplicação / Divisão * /</p>
+	4-Adição / Subtração + - </p>
+	Ex : 3 + 2 / 2 </p>
+	3 + 1 </p>
+	4</p>
+	Ex : (3 + 2) / 2 </p>
+	5 / 2</p>
+	2.5</p>
 
-			9-<strong>Funções Aritméticas</strong> :</p>
+	9-<strong>Funções Aritméticas</strong> :</p>
 
-			1-Valor Absoluto = Abs(-10) = 10</p>
-			Valor positivo</p>
-			2-Exponenciação = Exp(3,2) = 9</p>
-			3² = 9</p>
-			3-Valor Inteiro = Int(3.9) = 3</p>
-			Somente a parte inteira</p>
-			4-Raiz Quadrada = RaizQ(25) > 5</p>
-			5-Retorna Pi = Pi > 3.1415</p>
-			6-Seno (rad) = Sen(0.523) > 0.5</p>
-			7-Cosseno (rad) = Cos(0.523) > 0.86</p>
-			8-Tangente (rad) = Tag(0.523) > 0.57</p>
-			9-Graus para Rad = GraupRad(30) > 0.523</p>
+	1-Valor Absoluto = Abs(-10) = 10</p>
+	Valor positivo</p>
+	2-Exponenciação = Exp(3,2) = 9</p>
+	3² = 9</p>
+	3-Valor Inteiro = Int(3.9) = 3</p>
+	Somente a parte inteira</p>
+	4-Raiz Quadrada = RaizQ(25) > 5</p>
+	5-Retorna Pi = Pi > 3.1415</p>
+	6-Seno (rad) = Sen(0.523) > 0.5</p>
+	7-Cosseno (rad) = Cos(0.523) > 0.86</p>
+	8-Tangente (rad) = Tag(0.523) > 0.57</p>
+	9-Graus para Rad = GraupRad(30) > 0.523</p>
 
-			10-Operadores Relacionais : </p>
+	10-Operadores Relacionais : </p>
 
-			1-Maior que ></p>
-			2-Menor que << /p>
-				3-Maior ou igual a >=</p>
-				4-Menor ou igual a <=< /p>
-					5-Igual a =</p>
-					6-Diferente de <>
-						</p>
+	1-Maior que ></p>
+	2-Menor que << /p>
+	3-Maior ou igual a >=</p>
+	4-Menor ou igual a <=< /p>
+	5-Igual a =</p>
+	6-Diferente de <></p>
 
-						11-Operadores Lógicos :</p>
+	11-Operadores Lógicos :</p>
 
-						-Operador E = Eu quero que as 2 sejam V</p>
-						-Se p e q são V, logo p e q é Verdadeiro</p>
-						-Se p for V e q for F, logo p e q é Falso</p>
-						-Se p for F e q for V, logo p e q é F</p>
-						-Se p for F e q for F, logo p e q é F</p>
+	-Operador E = Eu quero que as 2 sejam V</p>
+	-Se p e q são V, logo p e q é Verdadeiro</p>
+	-Se p for V e q for F, logo p e q é Falso</p>
+	-Se p for F e q for V, logo p e q é F</p>
+	-Se p for F e q for F, logo p e q é F</p>
 
-						-Operador OU = Eu quero que p /q seja V</p>
-						-Se p e q são V, logo p ou q é Verdadeiro</p>
-						-Se p for V e q for F, logo p ou q é V</p>
-						-Se p for F e q for F, logo p ou q é V</p>
-						-Se p for F e q for F, logo p ou q é F</p>
+	-Operador OU = Eu quero que p /q seja V</p>
+	-Se p e q são V, logo p ou q é Verdadeiro</p>
+	-Se p for V e q for F, logo p ou q é V</p>
+	-Se p for F e q for F, logo p ou q é V</p>
+	-Se p for F e q for F, logo p ou q é F</p>
 
-						-Operador Não = É o contrário</p>
-						-Se p for V, logo Não p é F</p>
-						-Se q for F, logo Não q é V</p>
+	-Operador Não = É o contrário</p>
+	-Se p for V, logo Não p é F</p>
+	-Se q for F, logo Não q é V</p>
 
-						12-Ordem de Precedência :</p>
+	12-Ordem de Precedência :</p>
 
-						1° Aritméticos : (), ^,*/, e +-</p>
-						2° Relacionais : Todos</p>
-						3° Lógicos : E, OU e Não</p>
+	1° Aritméticos : (), ^,*/, e +-</p>
+	2° Relacionais : Todos</p>
+	3° Lógicos : E, OU e Não</p>
 
-						<strong>13-Estruturas Condicionais : </strong></p>
+	<strong>13-Estruturas Condicionais : </strong></p>
 
-						Se ( expressão ) entao</p>
-						----Bloco A</p>
-						FimSe</p>
-						Se algo acontecer, então vai acontecer o Bloco A</p>
+	Se ( expressão ) entao</p>
+	----Bloco A</p>
+	FimSe</p>
+	Se algo acontecer, então vai acontecer o Bloco A</p>
 
-						Se ( expressão ) entao</p>
-						----Bloco A</p>
-						senao</p>
-						----Bloco B</p>
-						FimSe</p>
-						Se algo acontecer, então vai acontecer o Bloco A, senão vai acontecer o Bloco B</p>
+	Se ( expressão ) entao</p>
+	----Bloco A</p>
+	senao</p>
+	----Bloco B</p>
+	FimSe</p>
+	Se algo acontecer, então vai acontecer o Bloco A, senão vai acontecer o Bloco B</p>
 
-						Condicional Simples : Se ... entao</p>
-						... Composta : Se ... entao ... senao</p>
+	Condicional Simples : Se ... entao</p>
+	... Composta : Se ... entao ... senao</p>
 
-						Se (situação 1) então</p>
-						----Bloco A</p>
-						senao
-						Se (situação 2) entao</p>
-						--------Bloco B</p>
-						senao</p>
-						--------Bloco C</p>
-						FimSe</p>
-						FimSe</p>
+	Se (situação 1) então</p>
+	----Bloco A</p>
+	senao
+		Se (situação 2) entao</p>
+	--------Bloco B</p>
+	senao</p>
+	--------Bloco C</p>
+		FimSe</p>
+	FimSe</p>
 
-						Temos 2 condições( se ... então...senão e Se ... então ), então 2 FimSe</p>
+	Temos 2 condições( se ... então...senão e Se ... então ), então 2 FimSe</p>
 
-						Se (situação 1) então</p>
-						Bloco A</p>
-						senao
-						Se (situação 2) entao</p>
-						Bloco B</p>
-						senao</p>
-						Bloco C</p>
-						Se ( situação 3) então</p>
-						Bloco D </p>
-						FimSe</p>
-						FimSe</p>
-						FimSe</p>
+	Se (situação 1) então</p>
+	Bloco A</p>
+	senao
+	Se (situação 2) entao</p>
+	Bloco B</p>
+	senao</p>
+	Bloco C</p>
+	Se ( situação 3) então</p>
+	Bloco D </p>
+	FimSe</p>
+	FimSe</p>
+	FimSe</p>
 
-						Temos 3 condições( se ... então...senão, Se ... então..senao e Se...então), então 3 FimSe</p>
+	Temos 3 condições( se ... então...senão, Se ... então..senao e Se...então), então 3 FimSe</p>
 
-						<strong>14-Função Escolha :</strong></p>
+	<strong>14-Função Escolha :</strong></p>
 
-						Escolha (variável)</p>
-						Caso valor</p>
-						Bloco A</p>
-						Caso valor</p>
-						Bloco B</p>
-						Caso valor</p>
-						Bloco C</p>
-						OutroCaso</p>
-						BlocoD</p>
-						FimEscolha</p>
+	Escolha (variável)</p>
+	Caso valor</p>
+	Bloco A</p>
+	Caso valor</p>
+	Bloco B</p>
+	Caso valor</p>
+	Bloco C</p>
+	OutroCaso</p>
+	BlocoD</p>
+	FimEscolha</p>
 
-						Função funciona somente valores inteiros !!!</p>
+	Função funciona somente valores inteiros !!!</p>
 
-						<strong>15-Estruturas de Repetição 1</strong></p>
+	<strong>15-Estruturas de Repetição 1</strong></p>
 
 						Exemplo 01 :</p>
 						Enquanto expressão faça</p>
@@ -308,7 +322,6 @@
 													S <- S + N</p>
 														cont <- cont + 1</p>
 															FimEnquanto</p>
-															</div>
+											</div>
 </body>
-
 </html>
