--- a/Historico.html
+++ b/Historico.html
@@ -5,16 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Histórico</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilo05.css">
     <link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
     <ul>
-        <li><a href="index.html" rel="prev">Voltar</a></li>
-    </ul>
+		<li><a href="index.html" rel="prev">Voltar</a></li>
+	</ul>
+	<ul>
+		<li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
+        <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
+        <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
+        <li><a href="Dicas.html">Dicas</a></li>
+        <li><a href="Historico.html" rel="next">Histórico</a></li>
+        <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
+        <li><a href="PaginaHTML.html" rel="next">PáginaHTML</a></li>
+        <li><a href="ProjetoAlfa.html" rel="next">ProjetoAlfa</a></li>
+        <li><a href="ProjetoGoogleGlass.html">ProjetoGoogleGlass</a></li>
+        <li><a href="Python.html" rel="next">Python</a></li>
+        <li><a href="TagsCSS.html"rel="next">TagsCSS</a></li>
+        <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
+        <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
+	</ul>
+    <div id="interface">
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
+
+    <strong>02/03</strong> 1.9<br>
+    Coloquei menus em quase todas as páginas, agora a pessoa pode<br> acessar qualquer uma página de outra<br>
+    Alterei também as cores das páginas pra ficar mais diferente<br>
+    Não ia criar de primeiro momento, mas depois resolvi criar a página<br> Xadrez só pra descontração mesmo<br>
+    Criado a página MySQL
+    <br><br>
 
     <strong>01/02</strong> 1.8<br>
     Primeiramente tentei corrigir o problema do ProjetoGoogleGlass, não consegui, resolvi dar continuidade<br> ao curso, futuramente eu resolvo ele.<br>
