--- a/Python.html
+++ b/Python.html
@@ -13,6 +13,24 @@
 </head>
 
 <body>
+    <ul>
+		<li><a href="index.html" rel="prev">Voltar</a></li>
+	</ul>
+	<ul>
+		<li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
+        <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
+        <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
+        <li><a href="Dicas.html">Dicas</a></li>
+        <li><a href="Historico.html" rel="next">Histórico</a></li>
+        <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
+        <li><a href="PaginaHTML.html" rel="next">PáginaHTML</a></li>
+        <li><a href="ProjetoAlfa.html" rel="next">ProjetoAlfa</a></li>
+        <li><a href="ProjetoGoogleGlass.html">ProjetoGoogleGlass</a></li>
+        <li><a href="Python.html" rel="next">Python</a></li>
+        <li><a href="TagsCSS.html"rel="next">TagsCSS</a></li>
+        <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
+        <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
+	</ul>
     <h1>Python</h1>
     <h2>Revisão Python 3</h2>
     <pre>
