--- a/Historico.html
+++ b/Historico.html
@@ -32,6 +32,13 @@
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
 
+    <strong>03/03 Sexta-Feira</strong> 2.0<br>
+    Criado o menu Livros e Passos<br>
+    Livros são indicações<br>
+    Passos é pra me ajudar na construção de menus pro site<br>
+    Hoje eu talvez eu dê uma parada na criação de menus pra focar em CSS
+    <br><br>
+    
     <strong>02/03</strong> 1.9<br>
     Coloquei menus em quase todas as páginas, agora a pessoa pode<br> acessar qualquer uma página de outra<br>
     Alterei também as cores das páginas pra ficar mais diferente<br>
