--- a/TagsHTML.html
+++ b/TagsHTML.html
@@ -81,6 +81,12 @@
     </p>
 
     <p>
+        < img src="html5.png" alt="Logo de HTML5"><br>
+        Adiciona imagem que ta na mesma pasta, caso esteja em outro basta digitar /nomedapasta/nomedoarquivo<br> 
+        ou caso esteja antes colocar ../nomedapasta/nomedoarquivo<br>
+        Em alt fica uma explicação da imagem
+    </p>
+    <p>
         9¹ <strong>< input type="text" id="Nome" name="Nome"></strong><br>
         Pedindo pro usuário digitar um texto
     </p> 
